<package>
  <name>adventure_slam</name>
  <version>0.1.0</version>
  <description>
     adventure_slam 
  </description>
  <author>Rishabh Biyani</author>
  <maintainer email="rbiyani@umd.edu">Rishabh Biyani</maintainer>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

</package>
